add built files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: destini_challenge_starting
-description: A new Flutter application.
+name: watashiwa.soy
+description: An interactive novelette built with Dart/Flutter.
 
 version: 1.0.0+1
 
