add build file for change background image and fonts

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"images/background.png":["images/background.png"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"images/GhostGalaxies.jpg":["images/GhostGalaxies.jpg"],"images/Jupiter.jpg":["images/Jupiter.jpg"],"images/background.png":["images/background.png"]}
